WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231949
Don't re-evaluate viewport dependent media queries if the viewport doesn't change
https://bugs.webkit.org/show_bug.cgi?id=231949
Summary
Don't re-evaluate viewport dependent media queries if the viewport doesn't ch...
Antti Koivisto
Reported
2021-10-19 06:08:42 PDT
It can be expensive if there are tons of queries
Attachments
Patch
(4.56 KB, patch)
2021-10-19 06:46 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(6.34 KB, patch)
2021-10-19 22:07 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-10-19 06:09:13 PDT
rdar://77240171
Antti Koivisto
Comment 2
2021-10-19 06:46:02 PDT
Created
attachment 441719
[details]
Patch
Antti Koivisto
Comment 3
2021-10-19 22:07:13 PDT
Created
attachment 441848
[details]
Patch
EWS
Comment 4
2021-10-20 08:25:52 PDT
Committed
r284536
(
243278@main
): <
https://commits.webkit.org/243278@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441848
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug