Don't re-evaluate viewport dependent media queries if the viewport doesn't change https://bugs.webkit.org/show_bug.cgi?id=231949 rdar://77240171

Reviewed by Alan Bujtas.

Source/WebCore:

If there are many viewport dependent rules (some pages have thousands) re-evaluating can take a while.
It is currently done unconditionally before layout.

* css/MediaQueryEvaluator.cpp:
(WebCore::mediaQueryViewportStateForDocument):
* css/MediaQueryEvaluator.h:
* style/StyleScope.cpp:
(WebCore::Style::Scope::evaluateMediaQueriesForViewportChange):

Save the viewport state so we can test if anything that affects media query results has changed since the last time.

* style/StyleScope.h:

Source/WebKit:

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::handlePreferenceChange):

Remember to signal accessibility settings change on this code path too.


Canonical link: https://commits.webkit.org/243278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284536 268f45cc-cd09-0410-ab3c-d52691b4dbfc